音量調整実装

--- a/dial3/Base.lproj/Main.storyboard
+++ b/dial3/Base.lproj/Main.storyboard
@@ -140,8 +140,18 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="brite" id="At0-Q0-A79"/>
                             </imageView>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PEf-4q-yQn">
+                                <rect key="frame" x="35" y="88" width="186" height="16"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Label" id="ZCV-QN-Ak8">
+                                    <font key="font" metaFont="system" size="16"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="displayP3"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                         <connections>
+                            <outlet property="Label2" destination="PEf-4q-yQn" id="s6l-JC-b2I"/>
                             <outlet property="label1" destination="2oa-Cm-jIF" id="K6a-bO-Tov"/>
                         </connections>
                     </view>
